{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 20,
  "lineage": "d632076f-f378-0c07-6ef4-0aa3695aeaa8",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355673305:network-acl/acl-0ebb004bc0b24b662",
            "default_network_acl_id": "acl-0ebb004bc0b24b662",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ebb004bc0b24b662",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "124355673305",
            "subnet_ids": [
              "subnet-015963305c6eff778",
              "subnet-05a2041078ed9748c",
              "subnet-0679d0d4d10fce1a0"
            ],
            "tags": {
              "Name": "k6-loadtest-vpc"
            },
            "tags_all": {
              "Name": "k6-loadtest-vpc"
            },
            "vpc_id": "vpc-04ffce9631a4c1635"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355673305:route-table/rtb-0dbad543fc6d8129a",
            "default_route_table_id": "rtb-0dbad543fc6d8129a",
            "id": "rtb-0dbad543fc6d8129a",
            "owner_id": "124355673305",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "k6-loadtest-vpc"
            },
            "tags_all": {
              "Name": "k6-loadtest-vpc"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-04ffce9631a4c1635"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355673305:security-group/sg-004d4d7a0e9b36418",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-004d4d7a0e9b36418",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "124355673305",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k6-loadtest-vpc"
            },
            "tags_all": {
              "Name": "k6-loadtest-vpc"
            },
            "vpc_id": "vpc-04ffce9631a4c1635"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd516419405c4f94",
            "arn": "arn:aws:ec2:us-east-1:124355673305:elastic-ip/eipalloc-0bd516419405c4f94",
            "domain": "vpc",
            "id": "eipalloc-0bd516419405c4f94",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-85-101-82.compute-1.amazonaws.com",
            "public_ip": "98.85.101.82",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "k6-loadtest-vpc"
            },
            "tags_all": {
              "Name": "k6-loadtest-vpc"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355673305:internet-gateway/igw-03224713af8d0466a",
            "id": "igw-03224713af8d0466a",
            "owner_id": "124355673305",
            "tags": {
              "Name": "k6-loadtest-vpc"
            },
            "tags_all": {
              "Name": "k6-loadtest-vpc"
            },
            "vpc_id": "vpc-04ffce9631a4c1635"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd516419405c4f94",
            "association_id": "eipassoc-0062054cc84b8dfd2",
            "connectivity_type": "public",
            "id": "nat-0b440b868c614dbe7",
            "network_interface_id": "eni-00c4b51daddb59849",
            "private_ip": "10.0.1.166",
            "public_ip": "98.85.101.82",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-015963305c6eff778",
            "tags": {
              "Name": "k6-loadtest-vpc"
            },
            "tags_all": {
              "Name": "k6-loadtest-vpc"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07e5116849b06981c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b440b868c614dbe7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07e5116849b06981c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03224713af8d0466a",
            "id": "r-rtb-0fcb44b0c558690ce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fcb44b0c558690ce",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355673305:route-table/rtb-07e5116849b06981c",
            "id": "rtb-07e5116849b06981c",
            "owner_id": "124355673305",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "k6-loadtest-vpc"
            },
            "tags_all": {
              "Name": "k6-loadtest-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ffce9631a4c1635"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355673305:route-table/rtb-0fcb44b0c558690ce",
            "id": "rtb-0fcb44b0c558690ce",
            "owner_id": "124355673305",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "k6-loadtest-vpc"
            },
            "tags_all": {
              "Name": "k6-loadtest-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ffce9631a4c1635"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a45f063e92de84d3",
            "route_table_id": "rtb-07e5116849b06981c",
            "subnet_id": "subnet-0cb68c72e34b118c0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099b080a9e0a30308",
            "route_table_id": "rtb-07e5116849b06981c",
            "subnet_id": "subnet-0679d0d4d10fce1a0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07adb6e4c23f7893a",
            "route_table_id": "rtb-0fcb44b0c558690ce",
            "subnet_id": "subnet-015963305c6eff778"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0269f1c77f246f60a",
            "route_table_id": "rtb-0fcb44b0c558690ce",
            "subnet_id": "subnet-05a2041078ed9748c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355673305:subnet/subnet-0cb68c72e34b118c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb68c72e34b118c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124355673305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k6-loadtest-vpc"
            },
            "tags_all": {
              "Name": "k6-loadtest-vpc"
            },
            "vpc_id": "vpc-04ffce9631a4c1635"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355673305:subnet/subnet-0679d0d4d10fce1a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0679d0d4d10fce1a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124355673305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k6-loadtest-vpc"
            },
            "tags_all": {
              "Name": "k6-loadtest-vpc"
            },
            "vpc_id": "vpc-04ffce9631a4c1635"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355673305:subnet/subnet-015963305c6eff778",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015963305c6eff778",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124355673305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k6-loadtest-vpc"
            },
            "tags_all": {
              "Name": "k6-loadtest-vpc"
            },
            "vpc_id": "vpc-04ffce9631a4c1635"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355673305:subnet/subnet-05a2041078ed9748c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a2041078ed9748c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124355673305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k6-loadtest-vpc"
            },
            "tags_all": {
              "Name": "k6-loadtest-vpc"
            },
            "vpc_id": "vpc-04ffce9631a4c1635"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355673305:vpc/vpc-04ffce9631a4c1635",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ebb004bc0b24b662",
            "default_route_table_id": "rtb-0dbad543fc6d8129a",
            "default_security_group_id": "sg-004d4d7a0e9b36418",
            "dhcp_options_id": "dopt-00d788c495fdfb50d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ffce9631a4c1635",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dbad543fc6d8129a",
            "owner_id": "124355673305",
            "tags": {
              "Name": "k6-loadtest-vpc"
            },
            "tags_all": {
              "Name": "k6-loadtest-vpc"
            }
          }
        }
      ]
    }
  ]
}